# scholar-loop

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
engines/cheater/: __init__.py
engines/torch_regression/: __init__.py  prepare.py  train.py
engines/torch_vision/: prepare.py
engines/vision/: prepare.py  train.py
examples/: e2e_live.py  run_to_paper.py
examples/sample_run/: README.md  experiments.jsonl  paper.md  run.md
examples/sample_run_diabetes/: README.md  experiments.jsonl  paper.md  run.md
profiles/: diabetes-mlp.yaml  digits-mlp.yaml
scholarloop/: advisor.py  calibration.py  debate.py  governor.py  litscout.py  orchestrator.py  paper.py  reasoner.py  reasoning.py  reflector.py  runner.py  skills.py
tests/: test_calibration.py  test_frozen_scoring.py  test_governor.py  test_litscout.py  test_orchestrator.py  test_reasoning.py  test_runner.py  test_skills.py  test_torch_engine.py
