[project]
name = "scholarloop"
version = "0.0.1"
description = "An auto-research framework that replicates a PhD's experiment workflow on a small-GPU budget."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Renee Jia", email = "reneejia368@gmail.com" }]
keywords = ["autonomous-research", "agents", "llm", "machine-learning", "experiment-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = ["anthropic>=0.92"]                       # only needed for real runs (AnthropicLLM); tests use MockLLM
engines = ["torch>=2.0", "numpy>=1.23", "scikit-learn>=1.1"]  # the real torch experiment engines

[project.urls]
Repository = "https://github.com/renee-jia/scholar-loop"

[tool.setuptools.packages.find]
include = ["scholarloop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
